<resources>
    <string name="app_name">Dungeon Master</string>
    <string name="native_proficiencies">Native Proficiencies: %s</string>
    <string name="character_name_placeholder">Your Character</string>
    <string name="proficiency_list_label">Proficient In:</string>
    <string name="character_name_entry_hint">Character Name</string>
    <string name="character_height_label">Height</string>
    <string name="character_height_ft_hint">Ft</string>
    <string name="character_height_in_hint">In</string>
    <string name="character_combined_height_format">Height: %dft %din</string>
    <string name="character_weight_format">Weight: %dlbs</string>
    <string name="character_weight_label">Weight</string>
    <string name="character_weight_hint">lbs</string>
    <string name="proficiency_selection">{0,choice,0#Selection Complete|1#Choose 1 Proficiency|1&lt;Choose {0} Proficiencies}</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>

    <!-- Accessibility -->
    <string name="add_character_button_accessible">Create New Character</string>
    <string name="delete_character_button_accessible">Delete Character</string>
    <string name="indicator_arrow_accessible">Arrow facing right</string>

    <!-- Ability Scores -->
    <string name="ability_str">Strength</string>
    <string name="ability_dex">Dexterity</string>
    <string name="ability_con">Constitution</string>
    <string name="ability_int">Intelligence</string>
    <string name="ability_wis">Wisdom</string>
    <string name="ability_cha">Charisma</string>
    <string name="ability_loading">Loading…</string>
    <string name="ability_roll">Roll</string>

</resources>
